--- a/profile.html
+++ b/profile.html
@@ -12,9 +12,9 @@
 	            <li class="crumb"><a href="./profile.html">Profile</a></li>
 	            <li class="crumb"><a href="./about.html">About</a></li>
 	        </ol>
-            <button id="color">My Favorite Color</button>
-            <button id="place">My Favorite Place</button>
-            <button id="ritual">My Favorite Ritual</button>
+            <button class='favorites' id="color">My Favorite Color</button>
+            <button class='favorites' id="place">My Favorite Place</button>
+            <button class='favorites' id="ritual">My Favorite Ritual</button>
 	    </nav>
 
 
