fixed some css, compiled onto same file, startd working on neighorhood page

--- a/home.html
+++ b/home.html
@@ -6,11 +6,13 @@
 
 </head>
 <body>
+<div id="body">
 	<nav>
 		<ol>
 	        <li class="crumb"><a href="./home.html">Home</a></li>
 	        <li class="crumb"><a href="./profile.html">Profile</a></li>
 	        <li class="crumb"><a href="./about.html">About</a></li>
+			<li class="crumb"><a href="./neighborhood.html">Neighborhood</a></li>
 	    </ol>
 	</nav>
 
@@ -46,8 +48,7 @@
 
 	</content>
 
-
+</div>
 	<script src="about.js"></script>
-
 </body>
 </html>
