--- a/profile.html
+++ b/profile.html
@@ -1,22 +1,25 @@
+<!DOCTYPE html>
 <head>
-	<title>Homepage</title>
+	<title>Profile</title>
 	<link href="styles.css" rel="stylesheet">
-	<link href="profile.css" rel="stylesheet">
+
 
 </head>
 
 <body>
+    <div id="body">
         <nav>
 		    <ol>
 	            <li class="crumb"><a href="./home.html">Home</a></li>
 	            <li class="crumb"><a href="./profile.html">Profile</a></li>
 	            <li class="crumb"><a href="./about.html">About</a></li>
+                <li class="crumb"><a href="./neighborhood.html">Neighborhood</a></li>
 	        </ol>
             <button class='favorites' id="color">My Favorite Color</button>
             <button class='favorites' id="place">My Favorite Place</button>
             <button class='favorites' id="ritual">My Favorite Ritual</button>
 	    </nav>
-
+    </div>
 
     <div id="rows">
         <section class='topics' id="skills">
