fixed about page

--- a/about.html
+++ b/about.html
@@ -5,12 +5,14 @@
 	<link href="styles.css" rel="stylesheet">
 </head>
 <body>
+	<div id="body">
 	<nav>
 		<ol>
 	        <li class="crumb"><a href="./home.html">Home</a></li>
 	        <li class="crumb"><a href="./profile.html">Profile</a></li>
 	        <li class="crumb"><a href="./about.html">About</a></li>
-	    </ol>
+			<li class="crumb"><a href="./neighborhood.html">Neighborhood</a></li>
+		</ol>
 	</nav>
 
 	<content>
@@ -27,6 +29,6 @@
 		</p>
 
 	</content>
-
+	</div>
 </body>
 </html>
