Functioning rec button for restaurant

--- a/neighborhood.html
+++ b/neighborhood.html
@@ -35,15 +35,17 @@
             <h3>Restaurants</h3>
             <p>Below is our restuarant rankings:</p>
             <ol>
-                <li><a href="https://facebook.com/southhillgrill/">South Hill Grill</a></li>
-                <li><a href="https://www.zmenu.com/hogans-diner-spokane-online-menu/">Hogans</a></li>
-                <li><a href="http://www.slickrockburrito.com/">Slick Rock Burrito</a></li>
+                <li class="restaurants"><a href="https://facebook.com/southhillgrill/">South Hill Grill</a></li>
+                <li class="restaurants"><a href="https://www.zmenu.com/hogans-diner-spokane-online-menu/">Hogans</a></li>
+                <li class="restaurants"><a href="http://www.slickrockburrito.com/">Slick Rock Burrito</a></li>
             </ol>
+            <button id="rec">Recommend</button>
         </section>
         <section class="features" id="parks">
             <h3>Parks</h3>
-            <p></p>
+            <p>Didn't have enough time to do this part</p>
         </section>
 
     </div>
+    <script src="neighborhood.js"></script>
 </body>
